force-app/main/default/objects/AnaliseCredito__c/AnaliseCredito__c.object-meta.xml
<CustomObject>
    <label>Análise de Crédito</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Análises de Crédito</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>