force-app/main/default/objects/AnaliseCredito__c/fields/Bloco__c.field-meta.xml
<CustomField>
    <fullName>Bloco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bloco</label>
    <referenceTo>Bloco__c</referenceTo>
    <relationshipLabel>Análises de Crédito</relationshipLabel>
    <relationshipName>Analises_de_Credito</relationshipName>
    <type>Lookup</type>
</CustomField>