force-app/main/default/objects/AnaliseCredito__c/fields/ComprometimentoRenda__c.field-meta.xml
<CustomField>
    <fullName>ComprometimentoRenda__c</fullName>
    <label>Comprometimento Renda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>