force-app/main/default/objects/AnaliseCredito__c/fields/DataAnalise__c.field-meta.xml
<CustomField>
    <fullName>DataAnalise__c</fullName>
    <label>Data da Análise</label>
    <type>Date</type>
</CustomField>