force-app/main/default/objects/AnaliseCredito__c/fields/DataVencimento__c.field-meta.xml
<CustomField>
    <fullName>DataVencimento__c</fullName>
    <label>Data de Vencimento</label>
    <type>Date</type>
</CustomField>