force-app/main/default/objects/AnaliseCredito__c/fields/DetalhesParecerCredito__c.field-meta.xml
<CustomField>
    <fullName>DetalhesParecerCredito__c</fullName>
    <label>Detalhes Parecer do Crédito</label>
    <type>TextArea</type>
</CustomField>