force-app/main/default/objects/AnaliseCredito__c/fields/Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Empreendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empreendimento</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Análises de Crédito</relationshipLabel>
    <relationshipName>Analises_de_Credito</relationshipName>
    <type>Lookup</type>
</CustomField>