force-app/main/default/objects/AnaliseCredito__c/fields/NomeComprador__c.field-meta.xml
<CustomField>
    <fullName>NomeComprador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do Comprador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Análises de Crédito</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>