force-app/main/default/objects/AnaliseCredito__c/fields/RendaNecessariaFGTS__c.field-meta.xml
<CustomField>
    <fullName>RendaNecessariaFGTS__c</fullName>
    <label>Renda Necessária com FGTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>