force-app/main/default/objects/AnaliseCredito__c/fields/RendaNecessariaFinanciamento__c.field-meta.xml
<CustomField>
    <fullName>RendaNecessariaFinanciamento__c</fullName>
    <label>Renda Necessária Financiamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>