force-app/main/default/objects/AnaliseCredito__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reprovada</fullName>
            </value>
            <value>
                <fullName>Vencida</fullName>
            </value>
            <value>
                <fullName>Em Análise</fullName>
                <default>true</default>
                <label>Em Análise</label>
            </value>
            <value>
                <fullName>Aprovada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>