force-app/main/default/objects/AnaliseCredito__c/fields/TotalFGTS__c.field-meta.xml
<CustomField>
    <fullName>TotalFGTS__c</fullName>
    <label>Total FGTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>