force-app/main/default/objects/AnaliseCredito__c/fields/TotalRendaCompradores__c.field-meta.xml
<CustomField>
    <fullName>TotalRendaCompradores__c</fullName>
    <label>Total Renda Compradores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>