force-app/main/default/objects/AnaliseCredito__c/fields/TotalRendaValorAplicado__c.field-meta.xml
<CustomField>
    <fullName>TotalRendaValorAplicado__c</fullName>
    <label>Total Renda Valor Aplicado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>