force-app/main/default/objects/AnaliseCredito__c/fields/UnidadeTabelaVendas__c.field-meta.xml
<CustomField>
    <fullName>UnidadeTabelaVendas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidade da Tabela de Vendas</label>
    <referenceTo>UnidadeTabelaVendas__c</referenceTo>
    <relationshipLabel>Análises de Crédito</relationshipLabel>
    <relationshipName>Analises_de_Credito</relationshipName>
    <type>Lookup</type>
</CustomField>