force-app/main/default/objects/AnaliseCredito__c/fields/UtilizaAto__c.field-meta.xml
<CustomField>
    <fullName>UtilizaAto__c</fullName>
    <label>Utiliza no ato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIm</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>