force-app/main/default/objects/AnaliseCredito__c/fields/ValorAplicado__c.field-meta.xml
<CustomField>
    <fullName>ValorAplicado__c</fullName>
    <label>Valor aplicado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>