force-app/main/default/objects/AnaliseCredito__c/fields/ValorFinanciamentoFGTS__c.field-meta.xml
<CustomField>
    <fullName>ValorFinanciamentoFGTS__c</fullName>
    <label>Valor Financiamento c/uso  FGTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>