force-app/main/default/objects/AnaliseCredito__c/fields/ValorFinanciamentoProposta__c.field-meta.xml
<CustomField>
    <fullName>ValorFinanciamentoProposta__c</fullName>
    <label>Valor Financiamento Proposta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>