force-app/main/default/objects/AnaliseCredito__c/recordTypes/AnaliseCredito.recordType-meta.xml
<RecordType>
    <fullName>AnaliseCredito</fullName>
    <active>true</active>
    <label>Análise de Crédito</label>
</RecordType>